env_config/tests/ui/enum.stderr
error: cannot be derived for enums
 --> tests/ui/enum.rs:4:6
  |
4 | enum MyLovelyEnum {
  |      ^^^^^^^^^^^^
