env_config/tests/ui/enum.rs
use env_config::{EnvConfig};

#[derive(EnvConfig)]
enum MyLovelyEnum {
    Something,
    SomethingElse,
}

fn main() {}
